--- a/jitpack.yml
+++ b/jitpack.yml
@@ -6,4 +6,4 @@ install:
   - ./mill-standalone all alir.shared.m2 alir.js.m2
   - mkdir -p ~/.m2/repository
   - cp -Rv out/alir/shared/m2/dest/* ~/.m2/repository/
-  - cp -Rv out/alir/jvm/m2/dest/* ~/.m2/repository/
+  - cp -Rv out/alir/js/m2/dest/* ~/.m2/repository/
