--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ jdk:
 
 script:
   - ./prelude.sh
-  - ./mill-standalone jitPack --owner sireum --repo alir
+  - ./mill-standalone jitPack --owner sireum --repo alir || true
   - ./test.sh
