Use source build for CI testing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ jdk:
 script:
   - ./prelude.sh
   - ./mill-standalone jitPack --owner sireum --repo alir || true
+  - export SIREUM_SOURCE_BUILD=true
   - ./test.sh
