--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,5 +1,7 @@
 jdk:
   - oraclejdk8
+before_install:
+  - ./prelude.sh
 install:
   - ./mill-standalone all alir.shared.m2 alir.js.m2
   - mkdir -p ~/.m2/repository
