--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,6 +3,7 @@ jdk:
 before_install:
   - ./prelude.sh
 install:
+  - export SIREUM_SOURCE_BUILD=false
   - ./mill-standalone all alir.shared.m2 alir.js.m2
   - mkdir -p ~/.m2/repository
   - cp -Rv out/alir/shared/m2/dest/* ~/.m2/repository/
