--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,5 +10,4 @@ cache:
   - bin\win\java
 
 build_script:
-  - ps: bin\init.ps1
-  - cmd: bin\build.cmd test test-js
+  - cmd: bin\build.cmd jitpack test test-js
